# OndselSolver

./: CMakeLists.txt
.github/workflows/: build.yml
MbDCode/: ASMTAssembly.cpp  MbDCode.cpp
OndselSolver/: ASMTAnimationParameters.cpp  ASMTAssembly.cpp  ASMTAssembly.h  ASMTConstantGravity.cpp  ASMTConstantGravity.h  ASMTConstraintSet.cpp  ASMTConstraintSet.h  ASMTForceTorque.cpp  ASMTGeneralMotion.cpp  ASMTGeneralMotion.h  ASMTItem.cpp  ASMTItem.h  ASMTItemIJ.cpp  ASMTJoint.cpp  ASMTMarker.cpp  ASMTMarker.h  ASMTMotion.cpp  ASMTPart.cpp  ASMTPointInPlaneJoint.cpp  ASMTPointInPlaneJoint.h  ASMTPrincipalMassMarker.cpp  ASMTRefCurve.cpp  ASMTRefPoint.cpp  ASMTRefPoint.h  ASMTRefSurface.cpp  ASMTRotationalMotion.cpp  ASMTRotationalMotion.h  ASMTSimulationParameters.cpp  ASMTSpatialContainer.cpp  ASMTSpatialContainer.h  ASMTSpatialItem.h  ASMTTime.cpp  ASMTTime.h  ASMTTranslationalMotion.cpp  ASMTTranslationalMotion.h  AccNewtonRaphson.cpp  Array.h  CADSystem.cpp  CADSystem.h  CMakeLists.txt  (+118 more)
OndselSolverMain/: OndselSolver.cpp
tests/: CMakeLists.txt  test.cpp
